# openai-api-rs

./: Cargo.toml
.cargo/: config.toml
examples/: assistant.rs  audio_speech.rs  audio_transcriptions.rs  audio_translations.rs  batch.rs  chat_completion.rs  chat_completion_stream.rs  completion.rs  embedding.rs  function_call.rs  function_call_role.rs  model.rs  openrouter.rs  openrouter_models.rs  openrouter_reasoning.rs  responses.rs  responses_stream.rs  vision.rs
src/: lib.rs
src/v1/: api.rs  error.rs
src/v1/chat_completion/: chat_completion_stream.rs
src/v1/responses/: responses.rs  responses_stream.rs
