[package]
name = "openai-api-rs"
version = "10.0.2"
edition = "2021"
authors = ["Dongri Jin <dongrium@gmail.com>"]
license = "MIT"
description = "OpenAI API client library for Rust (unofficial)"
repository = "https://github.com/dongri/openai-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["charset", "http2", "json", "multipart", "socks", "stream", "__rustls", "rustls"]

[dependencies.tokio]
version = "1"
features = ["sync","macros","io-util","rt","time"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.bytes]
version = "1.12"

[dependencies.tokio-tungstenite]
version = "0.29.0"
features = ["connect", "rustls-pki-types", "tokio-rustls"]

[dependencies.futures-util]
version = "0.3"
features = ["sink", "std"]

[dependencies.url]
version = "2.5"
