[package]
name = "openai-api-rs"
version = "10.1.0"
edition = "2021"
authors = ["Dongri Jin <dongrium@gmail.com>"]
license = "MIT"
description = "OpenAI API client library for Rust (unofficial)"
repository = "https://github.com/dongri/openai-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.bytes]
version = "1.12"

[dependencies.futures-util]
version = "0.3"
features = ["sink", "std"]

[dependencies.url]
version = "2.5"

# 1. Зависимости для стандартных ОС и старого WASI (не P2)
[target.'cfg(not(all(target_arch = "wasm32", target_os = "wasi")))'.dependencies]
reqwest = { version = "0.13", features = ["charset", "http2", "json", "multipart", "socks", "stream", "__rustls", "rustls"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-pki-types", "tokio-rustls"] }

# 2. Зависимости конкретно для WASI Preview 2 (wasm32-wasip2)
[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
golem-wasi-http = { version = "0", features = ["multipart"] }
url = "2.5"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
